--- a/seminar/package.json
+++ b/seminar/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "bootstrap": "^4.5.0",
     "exceljs": "^3.5.0",
     "html2canvas": "^1.0.0-rc.5",
+    "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.6.1",
     "primeng": "^9.0.0-rc.2",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
