--- a/seminar/angular.json
+++ b/seminar/angular.json
@@ -24,12 +24,12 @@
               "src/assets"
             ],
             "styles": [
-              "styles.css",
-              "../node_modules/bootstrap/dist/css/bootstrap.css"
-            ],
-            "scripts": [
-              "../node_modules/bootstrap/dist/js/bootstrap.js"
-            ]
+              "src/styles.css", 
+              "node_modules/bootstrap/dist/css/bootstrap.css"
+           ],
+        "scripts": [ 
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+          ]
           },
           "configurations": {
             "production": {
