--- a/seminar/angular.json
+++ b/seminar/angular.json
@@ -28,7 +28,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.css"
            ],
         "scripts": [ 
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
+              "node_modules/jspdf/dist/jspdf.min.js",
+              "node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"
           ]
           },
           "configurations": {
