--- a/seminar/package.json
+++ b/seminar/package.json
@@ -23,8 +23,11 @@
     "@angular/router": "~9.1.9",
     "bootstrap": "^4.5.0",
     "exceljs": "^3.5.0",
+    "faker": "^4.1.0",
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.5.1",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.3",
     "ngx-bootstrap": "^5.6.1",
     "primeng": "^9.0.0-rc.2",
     "rxjs": "~6.5.5",
